2007-02-01  Stefan Reuther  <Streu@gmx.de>

	* main.c (InitPHOSTLib): updated year

	* ion.c, alldata.c, doscvt.c, phostpdk.h: added ion storm
	accessors

2006-07-14  Stefan Reuther  <Streu@gmx.de>

	* pconfig.c, config.hi4, phostpdk.h: updated for PHost 4.0k

	* vgaputil.c [SUBALLOC]: removed this branch

	* main.c (InitPHOSTLib): updated year :)

2006-07-13  Stefan Reuther  <Streu@gmx.de>

	* utildata.c (PutUtilExplosion): new

	* pdk.texi: spellchecked

	* hullfunc.c (HullIsCommander, HullHasIonShield,
	HullHasHardenedCloak, HullHasAdvancedAntiCloak): new

2006-05-07  Stefan Reuther  <Streu@gmx.de>

	* conf.h: added platform definitions:
	  - Cygwin from Javier Sedano <javier.sedano@gmail.com>
	  - MacOS X from PHost port
	  - BeOS from PHost port by Alexey Veselovsky

2005-10-16  Stefan Reuther  <Streu@gmx.de>

	* ptscore.c (mygets): do not use 'gets'

	* auxdata.c (GetTotalActivityLevel, AddToActivityLevel): new
	functions

	* phostpdk.h: updated config

2005-08-11  Stefan Reuther  <Streu@gmx.de>

	* phostpdk.h: fixed BaseFixMission_Def
	(PutBeamName,PutTorpName,PutPlanetName): fixed prototypes

2005-05-21  Stefan Reuther  <Streu@gmx.de>

	* phostpdk.h: new prototypes

	* hullfunc.c: added new accessors
	added support for level-restricted functions

	* main.c (EffMission): new function
	increased banner date :)

	* vgapdat2.c (PutShipCargo): removed warning

	* pdk.texi: new functions documented; improved hullfunc docs and title page

	* ex*.c: removed warnings

2005-05-19  Stefan Reuther  <Streu@gmx.de>

	* splitmod.pl, Makefile: added support for compilation in separate
	directory
	* splitmod.def: added tons.c

	* hullfunc.c: added inhibited functions

2004-12-30  Stefan Reuther  <Streu@gmx.de>

	* auxdata.c: added Enemies accessors

	* tons.c, alldata.c: modified to allow read-only operation w.r.t tons

	* battle.c, pally.c, ptscore.c: fixed some warnings

2004-12-28  Stefan Reuther  <Streu@gmx.de>
